--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,6 @@
     <title>مكتب مأذون شرعي</title>
   </head>
   <body>
-    <div id="root" style="background: #faf2ea"></div>
+    <div id="root" ></div>
   </body>
 </html>
